--- a/app/src/main/res/layout/fragment_harga_komoditi_summary.xml
+++ b/app/src/main/res/layout/fragment_harga_komoditi_summary.xml
@@ -1,10 +1,9 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".main.hargakomoditi.HargaKomoditiFragment"
+    tools:context=".main.home.hargakomoditisummary.HargaKomoditiSumaryFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <!--<android.support.design.widget.AppBarLayout-->
         <!--android:layout_width="match_parent"-->
