--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/main_nav_komoditi"
-        android:title="Harga Komoditi" />
+        android:title="Home" />
 
     <item
         android:id="@+id/main_nav_indikator_ekonomi"
